data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1927.wast
;; 8. **Test Simultaneous `br_table` and `br_if` with Shared Labels**:    - **Description**: Implement `br_table` and `br_if` using overlapping structured control instructions.    - **Reasoning**: Confirms correct handling and resolution of shared labels in complex control flows.    - **Edge Relation**: Evaluates accurate management of label scopes and indices.

(assert_invalid
  (module
    (func $shared-labels (block (result i32) 
      (block (br_table 0 0 (i32.const 1) (i32.const 0)))
      (br_if 1 (i32.const 1))
    ))
  )
  "unknown label"
)